JBTM-1069 update to work with jboss-as-7.1.1.Final
git-svn-id: https://anonsvn.jboss.org/repos/labs/labs/jbosstm/branches/JBOSSTS_4_16@37942 c60d74c8-e8f6-0310-9e8f-d4a2fc68ab70